[package]
name = "luwen"
version = "0.7.14"
description = "A high-level interface for safe and efficient access Tenstorrent AI accelerators"
edition = "2021"
license = "Apache-2.0"
authors = ["Daniel Rosen <drosen@tenstorrent.com>"]
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.14", features = ["derive"] }
nom = "7.1.3"
rand = "0.8.5"
serde = { "version" = "1.0.164", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.22"
# luwen
luwen-core = { workspace = true }
luwen-api = { workspace = true }
luwen-ref = { workspace = true }
luwen-kmd = { workspace = true }

[dev-dependencies]
serial_test = "3.2.0"

[package.metadata.workspaces]
independent = true

[features]
test_hardware = []
test_grayskull = []
# wormhole
test_wormhole = []
test_wh_ubb = []
test_n150 = []
test_n300 = []
# blackhole
test_blackhole = []
test_p100a = []
test_p150 = []
test_p300 = []

[workspace]
members = [
  "apps/*",
  "bind/*",
  "crates/*",
]

[workspace.dependencies]
thiserror = "1.0.40"
# luwen
luwen = { path = ".", verison = "0.7.14" }
luwen-core = { path = "crates/luwen-core", version = "0.2.0" }
luwen-api = { path = "crates/luwen-api", version = "0.7.8" }
luwen-ref = { path = "crates/luwen-ref", version = "0.7.8" }
luwen-kmd = { path = "crates/luwen-kmd", version = "0.2.1" }
