[package]
name = "create-ethernet-map"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
luwen-core = {path = "../../crates/luwen-core", version = "0.2.0"}
luwen-if = {path = "../../crates/luwen-if", version = "0.5.3"}
luwen-ref = {path = "../../crates/luwen-ref", version = "0.4.0"}
clap = { version = "4.4.6", features = ["derive"] }
prometheus_exporter = "0.8.5"
prometheus = { version = "0.13.3", features = ["process"] }
