[package]
name = "create-ethernet-map"
version = "0.7.10"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
luwen-core = {path = "../../crates/luwen-core", version = "0.2.0"}
luwen-if = {path = "../../crates/luwen-if", version = "0.7.8" }
luwen-ref = {path = "../../crates/luwen-ref", version = "0.7.8" }
clap = { version = "4.4.6", features = ["derive"] }
prometheus_exporter = "0.8.5"
prometheus = { version = "0.13.3", features = ["process"] }

[package.metadata.workspaces]
independent = true
