[package]
name = "create-ethernet-map"
version = "0.7.10"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
luwen-core = { workspace = true }
luwen-if = { workspace = true }
luwen-ref = { workspace = true }
clap = { version = "4.4.6", features = ["derive"] }
prometheus_exporter = "0.8.5"
prometheus = { version = "0.13.3", features = ["process"] }

[package.metadata.workspaces]
independent = true
