[package]
name = "drunken-monkey"
version = "0.7.10"
edition = "2021"

[dependencies]
clap = {version = "4.4.14", features = ["derive"]}

luwen-if = {path = "../../crates/luwen-if", version = "0.7.8" }
luwen-ref = {path = "../../crates/luwen-ref", version = "0.7.8" }

[package.metadata.workspaces]
independent = true
