[package]
name = "create-ethernet-map"
version = "0.1.2"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
clap = { workspace = true }
luwen = { workspace = true }
