[package]
name = "flash_glx_revc_board_id"
version = "0.1.0"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
luwen = { workspace = true }
luwen-api = { workspace = true}
prost = "0.13"
serde_json = { workspace = true }
bytemuck = "1.0"
