[package]
name = "generate-names"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.workspaces]
independent = true

[dependencies]
bincode = { workspace = true }
luwen = { workspace = true }
nom = "7.1.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.22"
