[package]
name = "prometheus-exporter"
version = "0.7.10"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.workspaces]
independent = true

[dependencies]
clap = { workspace = true }
luwen = { workspace = true }
prometheus = { workspace = true }
prometheus_exporter = { workspace = true }
