[package]
name = "prometheus-exporter"
version = "0.1.1"
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
luwen = { workspace = true }
prometheus = { version = "0.13.3", features = ["process"] }
prometheus_exporter = "0.8.5"
