[package]
name = "libluwen"
version = "0.7.10"
edition = "2021"
license = "Apache-2.0"
description = """
C++ bindings for luwen
"""
authors = ["Luwen Team <drosen@tenstorrent.com>"]

[package.metadata.deb]
assets = [
    ["target/release/luwen.h", "/usr/include/luwen.h", "644"],
    ["target/release/libluwen.so", "/usr/lib/", "644"],
]

[lib]
name = "luwen"
crate-type = ["cdylib"]

[dependencies]
luwen-def = { workspace = true }
luwen-api = { workspace = true }

[build-dependencies]
cbindgen = ">= 0.25.0"

[dev-dependencies]
cc = "1.2.24"
tempfile = "3.20.0"

[package.metadata.workspaces]
independent = true
