[package]
name = "libluwen"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
C++ bindings for luwen
"""
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
assets = [
  ["target/release/luwen.h", "/usr/include/luwen.h", "644"],
  ["target/release/libluwen.so", "/usr/lib/", "644"],
]

[package.metadata.workspaces]
independent = true

[lib]
name = "luwen"
crate-type = ["cdylib"]

[dependencies]
luwen = { workspace = true }

[dev-dependencies]
cc = "1.2.24"
tempfile = "3.20.0"

[build-dependencies]
cbindgen = ">= 0.25.0"
