[package]
name = "luwen-api"
version = { workspace = true }
description = """
High-level interface for Tenstorrent device interactions
"""
edition = "2021"
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.workspaces]
independent = true

[dependencies]
bincode = { workspace = true }
bitfield-struct = { workspace = true }
bytemuck = { version = "1.22.0", features = ["derive"] }
luwen-def = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.19.0"
prost = "0.13.5"
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
home = { version = "=0.5.5", default-features = false }
prost-build = "0.13.5"
