[package]
name = "luwen-if"
version = "0.7.11"
description = "Generic interface to Tenstorrent ai accelerators, abstracting the details of communication"
edition = "2021"
license = "Apache-2.0"

[dependencies]
luwen-core = {path = "../luwen-core", version = "0.2.0"}

thiserror = "1.0.40"

serde = {version = "1.0.185", features = ["derive"]}
bincode = "1.3.3"
rust-embed = {version = "8.0.0", features = ["interpolate-folder-path"]}
once_cell = "1.19.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
bitfield-struct = "0.6.0"
prost = "0.13.5"
prost-types = "0.13.5"
serde_json = "1.0"
bytemuck = {version = "1.22.0", features = ["derive"]}

[build-dependencies]
prost-build = "0.13.5"
home = { version = "=0.5.5", default-features = false }

[package.metadata.workspaces]
independent = true
