[package]
name = "luwen-kmd"
version = "0.2.4"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Low-level PCIe interface to the Tenstorrent kernel-mode driver (KMD)
"""
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.workspaces]
independent = true

[dependencies]
bitfield-struct = { workspace = true }
luwen-def = { workspace = true }
memmap2 = "0.7.0"
nix = "0.26.2"
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
test_hardware = []
test_grayskull = []
