[package]
name = "luwen-pci"
version = "0.7.11"
description = """
PCIe communication implementation
"""
edition = "2021"
license = "Apache-2.0"

[dependencies]
luwen-kmd = { workspace = true }
luwen-api = { workspace = true }
luwen-def = { workspace = true }

thiserror = { workspace = true }

indicatif = "0.17.7"
tracing = "0.1.40"

[package.metadata.workspaces]
independent = true
