[package]
name = "luwen-pci"
version = "0.7.13"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
PCIe communication implementation
"""
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.workspaces]
independent = true

[dependencies]
indicatif = "0.17.7"
luwen-api = { workspace = true }
luwen-def = { workspace = true }
luwen-kmd = { workspace = true }
thiserror = { workspace = true }
