[package]
name = "luwen-ref"
version = "0.7.11"
description = "Reference pci communication implementation"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ttkmd-if = { workspace = true }
luwen-api = { workspace = true }
luwen-core = { workspace = true }

thiserror = { workspace = true }

indicatif = "0.17.7"
tracing = "0.1.40"

[package.metadata.workspaces]
independent = true
