[package]
name = "luwencpp"
version = "0.7.10"
edition = "2021"
license = "Apache-2.0"
description = "C++ bindings for luwen"
authors = ["Luwen Team <drosen@tenstorrent.com>"]

[package.metadata.deb]
assets = [
    ["target/release/luwen.h", "/usr/include/luwen.h", "644"],
    ["target/release/libluwencpp.so", "/usr/lib/", "644"],
]

[lib]
# crate-type = ["staticlib"]
crate-type = ["cdylib"]

[dependencies]
luwen-core = {path = "../luwen-core", version = "0.2.0"}
luwen-if = {path = "../luwen-if", version = "0.7.8" }

[build-dependencies]
cbindgen = ">= 0.25.0"

[dev-dependencies]
cc = "1.2.24"
tempfile = "3.20.0"

[package.metadata.workspaces]
independent = true
