[package]
name = "prometheus-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luwen-core = {path = "../luwen-core", version = "0.1.0"}
luwen-if = {path = "../luwen-if", version = "0.4.4"}
luwen-ref = {path = "../luwen-ref", version = "0.3.1"}
clap = { version = "4.4.6", features = ["derive"] }
prometheus_exporter = "0.8.5"
prometheus = { version = "0.13.3", features = ["process"] }
