[package]
name = "pyluwen"
version = "0.5.7"
description = "Python bindings for luwen"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ttkmd-if = {path = "../ttkmd-if", version = "0.1.0"}
luwen-core = {path = "../luwen-core", version = "0.1.0"}
luwen-if = {path = "../luwen-if", version = "0.4.7"}
luwen-ref = {path = "../luwen-ref", version = "0.3.3"}

pyo3 = { version = "0.19.2", features = ["extension-module", "multiple-pymethods"] }
