[package]
name = "pyluwen"
version = "0.7.7"
description = "Python bindings for Tenstorrent's luwen - a low level hardware interface library"
edition = "2021"
license = "Apache-2.0"
readme = "../../README.md"
authors = []
keywords = [
	"Tenstorrent",
	"Grayskull",
	"Wormhole",
	"Blackhole",
	"hardware"
]


[lib]
crate-type = ["cdylib"]

[dependencies]
ttkmd-if = {path = "../ttkmd-if", version = "0.2.1" }
luwen-core = {path = "../luwen-core", version = "0.2.0"}
luwen-if = {path = "../luwen-if", version = "0.6.0" }
luwen-ref = {path = "../luwen-ref", version = "0.5.1" }
serde_json = "1.0.117"

pyo3 = { version = "0.19.2", features = ["extension-module", "multiple-pymethods"] }

[features]
default = []
# Feature for building with abi3 compatibility for Python 3.11+
abi3-py311 = ["pyo3/abi3-py311"]
