[build-system]
requires = [
	"maturin>=1.2,<2.0",
]
build-backend = "maturin"

[project]
name = "pyluwen"
requires-python = ">=3.10"

dynamic = ["version"]

classifiers = [
	"Programming Language :: Rust",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
