[package]
name = "ttkmd-if"
version = "0.2.4"
description = "Lowest level pci interface to the tenstorrent driver (ttkmd)"
edition = "2021"
license = "Apache-2.0"

[dependencies]
luwen-core = { workspace = true }

nix = "0.26.2"
memmap2 = "0.7.0"
bitfield-struct = "0.6.0"

thiserror = { workspace = true }
tracing = "0.1.40"

[features]
test_hardware = []
test_grayskull = []

[package.metadata.workspaces]
independent = true
